--- a/Back/package.json
+++ b/Back/package.json
@@ -9,8 +9,12 @@
     },
     "dependencies": {
         "debug": "~2.6.9",
+        "dotenv": "^16.0.1",
         "express": "~4.16.1",
         "morgan": "~1.9.1",
-        "nodemon": "^2.0.19"
+        "nodemon": "^2.0.19",
+        "swagger-jsdoc": "^6.2.1",
+        "swagger-ui-express": "^4.5.0",
+        "ts-node": "^10.9.1"
     }
 }
