--- a/OpenVPN-TCP/server.conf
+++ b/OpenVPN-TCP/server.conf
@@ -1,8 +1,8 @@
 client
 dev tun
 proto tcp
-remote bg.torguardvpnaccess.com 1912
-remote 89.249.73.250 1912
+remote au.torguardvpnaccess.com 1912
+remote 168.1.210.188 1912
 resolv-retry infinite
 nobind
 persist-key
